--- a/index.html
+++ b/index.html
@@ -1,101 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Madan48 | Cybersecurity Portfolio</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Courier New', Courier, monospace;
-      background-image: url('kali.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      color: #00ff00;
-      text-shadow: 1px 1px 3px black;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    h1 {
-      font-size: 3rem;
-    }
-    p.tagline {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-    nav {
-      margin: 2rem 0;
-    }
-    nav a {
-      color: #00ff00;
-      text-decoration: none;
-      margin: 0 1rem;
-      border: 1px solid #00ff00;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      transition: all 0.3s ease;
-    }
-    nav a:hover {
-      background-color: #00ff00;
-      color: black;
-    }
-    section {
-      max-width: 800px;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 2rem;
-      border-radius: 10px;
-      margin-bottom: 2rem;
-    }
-    footer {
-      margin-top: auto;
-      text-align: center;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Madan Ghimire</h1>
-    <p class="tagline">Cybersecurity Enthusiast | Penetration Tester | Linux Geek</p>
-  </header>
+<!-- Kali Linux Interactive, Terminal-Style Profile README -->
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<p align="center">
+  <!-- Kali Linux Banner with background image (hosted externally) -->
+  <img src="https://raw.githubusercontent.com/dorianpro/kaliwallpapers/master/kali-linux-wallpaper-v8.png" width="100%" alt="Kali Linux Background Banner" style="border-radius: 8px;"/>
+</p>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am passionate about cybersecurity, ethical hacking, and digital forensics. I specialize in penetration testing, Linux-based tools, and networking. This portfolio showcases my journey and the tools I use to break and secure systems.</p>
-  </section>
+<p align="center">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Kali-dragon-icon.svg" width="110" alt="Kali Linux Dragon" />
+</p>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>More coming soon... Stay tuned!</p>
-  </section>
+<!-- Terminal-style Intro -->
+<div align="center">
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Mono&size=25&pause=1000&color=2689D4&center=true&vCenter=true&width=700&lines=Welcome+to+madan48's+Cybersecurity+Lab;Kali+Linux+Themed+Portfolio;Ethical+Hacking+%7C+Red+Teaming+%7C+Forensics" alt="Typing SVG" />
+</div>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: madanghimire@example.com</p>
-    <p>GitHub: <a href="https://github.com/madan48" target="_blank" style="color: #00ff00; text-decoration: underline;">madan48</a></p>
-  </section>
+<p align="center">
+  <img src="https://img.shields.io/badge/Hacker%20Mode-ON-2689d4?style=for-the-badge&logo=kalilinux&logoColor=white"/>
+  <img src="https://img.shields.io/badge/Linux-Kali-222222?style=for-the-badge&logo=linux&logoColor=2689d4"/>
+  <img src="https://img.shields.io/badge/Status-Active-brightgreen?style=for-the-badge&logo=signal"/>
+</p>
 
-  <footer>
-    <p>&copy; 2025 Madan Ghimire. Built with 💻 on GitHub Pages.</p>
-  </footer>
-</body>
-</html>
+---
+
+<pre>
+┌──(madan48㉿kali)-[~/cyber-lab]
+└─$ whoami
+
+<span style="color:#2689d4;font-weight:bold;">Cybersecurity Enthusiast | Penetration Tester | Linux Geek</span>
+</pre>
+
+---
+
+## 🐉 Featured Projects
+
+| Project | Description | Tech/Tools |
+|---------|-------------|------------|
+| [NetworkScanner](https://github.com/madan48/NetworkScanner) | A Python-based network reconnaissance & vulnerability scanner | `Python`, `Nmap`, `Scapy` |
+| [RedTeamOps](https://github.com/madan48/RedTeamOps) | Custom exploits and C2 scripts for red teaming | `Bash`, `Metasploit`, `PowerShell` |
+| [ForensicSuite](https://github.com/madan48/ForensicSuite) | Toolkit for digital forensics & incident response | `Autopsy`, `Volatility`, `Python` |
+| [WebPentest](https://github.com/madan48/WebPentest) | Automated web application pentesting scripts | `Burp Suite`, `ZAP`, `SQLmap` |
+
+> ⚡ **[Click here for all projects ⬇️](https://github.com/madan48?tab=repositories)**
+
+---
+
+## 🛠️ Tools & Skills
+
+![Python](https://img.shields.io/badge/Python-3776AB?style=flat&logo=python&logoColor=white)
+![Metasploit](https://img.shields.io/badge/Metasploit-333366?style=flat&logo=metasploit&logoColor=white)
+![Nmap](https://img.shields.io/badge/Nmap-4682B4?style=flat&logo=nmap&logoColor=white)
+![Linux](https://img.shields.io/badge/Linux-222222?style=flat&logo=linux&logoColor=2689d4)
+![Wireshark](https://img.shields.io/badge/Wireshark-1679A7?style=flat&logo=wireshark&logoColor=white)
+![Burp Suite](https://img.shields.io/badge/Burp%20Suite-FF6600?style=flat&logo=burpsuite&logoColor=white)
+![Docker](https://img.shields.io/badge/Docker-2496ED?style=flat&logo=docker&logoColor=white)
+![Kali Linux](https://img.shields.io/badge/Kali%20Linux-2689d4?style=flat&logo=kalilinux&logoColor=white)
+
+---
+
+## 📖 Latest Write-ups & CTFs
+
+- [HackTheBox — "MachineName" Writeup](https://github.com/madan48/HTB-Writeups)
+- [TryHackMe — Top Labs Solutions](https://github.com/madan48/THM-Writeups)
+- [Bug Bounty Reports](https://github.com/madan48/bugbounty-reports)
+
+---
+
+## 📫 Connect with Me
+
+<p align="center">
+  <a href="https://twitter.com/yourhandle"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"/></a>
+  <a href="https://linkedin.com/in/yourhandle"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"/></a>
+  <a href="mailto:your.email@domain.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
+  <a href="https://yourwebsite.com"><img src="https://img.shields.io/badge/Portfolio-222222?style=for-the-badge&logo=firefox-browser&logoColor=white"/></a>
+</p>
+
+---
+
+<pre>
+┌──(madan48㉿kali)-[~/cyber-lab]
+└─$ echo "Hack the Planet 🐉"
+</pre>
+
+<p align="center">
+  <img src="https://img.shields.io/badge/Rooted-in%20Kali%20Linux-2689d4?style=for-the-badge&logo=kalilinux&logoColor=white"/>
+</p>
+
+> _"The quieter you become, the more you are able to hear."_  
+> — Kali Linux
+
