--- a/index.html
+++ b/index.html
@@ -1,91 +1,58 @@
-<!-- Kali Linux Interactive, Terminal-Style Profile README -->
+<!-- Simple & Cool Hacker Portfolio Page -->
 
 <p align="center">
-  <!-- Kali Linux Banner with background image (hosted externally) -->
-  <img src="https://raw.githubusercontent.com/dorianpro/kaliwallpapers/master/kali-linux-wallpaper-v8.png" width="100%" alt="Kali Linux Background Banner" style="border-radius: 8px;"/>
+  <img src="/mnt/data/4e5d9afe-bf7f-42a8-8206-d23f5f9d0fed.png" width="120" alt="Hacker Logo" style="border-radius: 50%;"/>
 </p>
 
-<p align="center">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Kali-dragon-icon.svg" width="110" alt="Kali Linux Dragon" />
-</p>
-
-<!-- Terminal-style Intro -->
 <div align="center">
-  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Mono&size=25&pause=1000&color=2689D4&center=true&vCenter=true&width=700&lines=Welcome+to+madan48's+Cybersecurity+Lab;Kali+Linux+Themed+Portfolio;Ethical+Hacking+%7C+Red+Teaming+%7C+Forensics" alt="Typing SVG" />
+  <h1 style="font-family: monospace; color: #2689d4;">madan48's Cyber Lab</h1>
+  <p><code>Cybersecurity | Red Teaming | Linux</code></p>
+  <img src="https://readme-typing-svg.herokuapp.com?font=Fira+Mono&size=22&pause=1000&color=2689D4&center=true&vCenter=true&width=600&lines=Hacker+Mode+Activated;Rooted+in+Kali+Linux" alt="Typing SVG" />
 </div>
 
-<p align="center">
-  <img src="https://img.shields.io/badge/Hacker%20Mode-ON-2689d4?style=for-the-badge&logo=kalilinux&logoColor=white"/>
-  <img src="https://img.shields.io/badge/Linux-Kali-222222?style=for-the-badge&logo=linux&logoColor=2689d4"/>
-  <img src="https://img.shields.io/badge/Status-Active-brightgreen?style=for-the-badge&logo=signal"/>
-</p>
+---
+
+## 🔍 About Me
+
+```bash
+whoami
+Cybersecurity Enthusiast | Penetration Tester | Linux Geek
+```
 
 ---
 
-<pre>
-┌──(madan48㉿kali)-[~/cyber-lab]
-└─$ whoami
+## 🚀 Projects
 
-<span style="color:#2689d4;font-weight:bold;">Cybersecurity Enthusiast | Penetration Tester | Linux Geek</span>
-</pre>
-
----
-
-## 🐉 Featured Projects
-
-| Project | Description | Tech/Tools |
-|---------|-------------|------------|
-| [NetworkScanner](https://github.com/madan48/NetworkScanner) | A Python-based network reconnaissance & vulnerability scanner | `Python`, `Nmap`, `Scapy` |
-| [RedTeamOps](https://github.com/madan48/RedTeamOps) | Custom exploits and C2 scripts for red teaming | `Bash`, `Metasploit`, `PowerShell` |
-| [ForensicSuite](https://github.com/madan48/ForensicSuite) | Toolkit for digital forensics & incident response | `Autopsy`, `Volatility`, `Python` |
-| [WebPentest](https://github.com/madan48/WebPentest) | Automated web application pentesting scripts | `Burp Suite`, `ZAP`, `SQLmap` |
-
-> ⚡ **[Click here for all projects ⬇️](https://github.com/madan48?tab=repositories)**
+- 🕵️‍♂️ [NetworkScanner](https://github.com/madan48/NetworkScanner) — Python-based network recon tool
+- 🧨 [RedTeamOps](https://github.com/madan48/RedTeamOps) — Custom exploits & red team scripts
+- 🔍 [ForensicSuite](https://github.com/madan48/ForensicSuite) — Tools for digital forensics
+- 🕸️ [WebPentest](https://github.com/madan48/WebPentest) — Web app pentesting automation
 
 ---
 
-## 🛠️ Tools & Skills
+## 🛠️ Stack
 
 ![Python](https://img.shields.io/badge/Python-3776AB?style=flat&logo=python&logoColor=white)
-![Metasploit](https://img.shields.io/badge/Metasploit-333366?style=flat&logo=metasploit&logoColor=white)
 ![Nmap](https://img.shields.io/badge/Nmap-4682B4?style=flat&logo=nmap&logoColor=white)
 ![Linux](https://img.shields.io/badge/Linux-222222?style=flat&logo=linux&logoColor=2689d4)
-![Wireshark](https://img.shields.io/badge/Wireshark-1679A7?style=flat&logo=wireshark&logoColor=white)
 ![Burp Suite](https://img.shields.io/badge/Burp%20Suite-FF6600?style=flat&logo=burpsuite&logoColor=white)
 ![Docker](https://img.shields.io/badge/Docker-2496ED?style=flat&logo=docker&logoColor=white)
-![Kali Linux](https://img.shields.io/badge/Kali%20Linux-2689d4?style=flat&logo=kalilinux&logoColor=white)
+![Wireshark](https://img.shields.io/badge/Wireshark-1679A7?style=flat&logo=wireshark&logoColor=white)
 
 ---
 
-## 📖 Latest Write-ups & CTFs
-
-- [HackTheBox — "MachineName" Writeup](https://github.com/madan48/HTB-Writeups)
-- [TryHackMe — Top Labs Solutions](https://github.com/madan48/THM-Writeups)
-- [Bug Bounty Reports](https://github.com/madan48/bugbounty-reports)
-
----
-
-## 📫 Connect with Me
+## ✉️ Contact
 
 <p align="center">
-  <a href="https://twitter.com/yourhandle"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"/></a>
-  <a href="https://linkedin.com/in/yourhandle"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"/></a>
-  <a href="mailto:your.email@domain.com"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"/></a>
-  <a href="https://yourwebsite.com"><img src="https://img.shields.io/badge/Portfolio-222222?style=for-the-badge&logo=firefox-browser&logoColor=white"/></a>
+  <a href="https://twitter.com/yourhandle"><img src="https://img.shields.io/badge/Twitter-1DA1F2?style=flat&logo=twitter&logoColor=white"/></a>
+  <a href="https://linkedin.com/in/yourhandle"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white"/></a>
+  <a href="mailto:your.email@domain.com"><img src="https://img.shields.io/badge/Email-D14836?style=flat&logo=gmail&logoColor=white"/></a>
 </p>
 
 ---
 
-<pre>
-┌──(madan48㉿kali)-[~/cyber-lab]
-└─$ echo "Hack the Planet 🐉"
-</pre>
-
 <p align="center">
-  <img src="https://img.shields.io/badge/Rooted-in%20Kali%20Linux-2689d4?style=for-the-badge&logo=kalilinux&logoColor=white"/>
+  <code>echo "Hack the Planet 🐉"</code>
 </p>
-
-> _"The quieter you become, the more you are able to hear."_  
-> — Kali Linux
 
 
