--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>madan48 | Cybersecurity Portfolio</title>
+  <title>Madan Ghimire| Cybersecurity Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,9 +10,9 @@
   <div class="overlay">
     <main class="terminal">
       <img src="kali.png" class="kali-dragon" alt="Kali Linux Dragon"/>
-      <h1>madan48@kali:~$ Cybersecurity Portfolio</h1>
+      <h1>madan@kali:~$ Cybersecurity Portfolio</h1>
       <pre>
-Cybersecurity Enthusiast | Penetration Tester | Linux Geek
+Cybersecurity Enthusiast | Security Researcher
       </pre>
       <h2>Projects</h2>
       <ul>
