--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
   </div>
   <script>
-  const text = "madan@kali:~$ Cybersecurity Portfolio";
+  const text = "Madan Ghimire:~$ Cyber Security Portfolio";
   const text2 = "Cybersecurity Enthusiast | Security Researcher";
   let i = 0, j = 0;
 
