--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
       <h1><span id="typed"></span></h1>
       <span id="typed2" style="color: #39ff14; font-family: 'Fira Mono', monospace; font-size: 1.3em;"></span>
       
+      <div class="certifications-top" style="margin-bottom: 2em; display: flex; gap: 2em; align-items: center;">
+        <a href="https://www.credly.com/badges/7d762e1d-ce3c-427f-b8f5-8cbe33d274d4/linked_in_profile" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+          <img src="comptia.png" alt="CompTIA Security+ Badge" style="width:36px;height:36px;margin-right:10px;">
+          <span style="color:#fff; font-family: 'Fira Mono', monospace;">CompTIA Security+</span>
+        </a>
+        <a href="https://www.coursera.org/account/accomplishments/specialization/M377M3EDF7X2" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+          <img src="google.png" alt="Google Cyber Security Badge" style="width:36px;height:36px;margin-right:10px; background:#fff; border-radius:8px;">
+          <span style="color:#fff; font-family: 'Fira Mono', monospace;">Google CyberSecurity</span>
+        </a>
+      </div>
+      
       <h2>Projects</h2>
       <ul>
         <li><a href="https://github.com/madan48/NetworkScanner" target="_blank">NetworkScanner</a> - Python network recon & vulnerability scanner</li>
